--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,6 @@
     src: url("./assets/fonts/Thundergood.ttf");
     font-family: "Streamster";
     src: url("./assets/fonts/Streamster.ttf");
+    font-family: "Posterman";
+    src: url("./assets/fonts/Posterman.otf");
 }
