--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 @font-face {
-    font-family: "Thundergood";
-    src: url("./assets/fonts/Thundergood.ttf");
-    font-family: "Streamster";
-    src: url("./assets/fonts/Streamster.ttf");
     font-family: "Posterman";
     src: url("./assets/fonts/Posterman.otf");
+}
+
+@font-face {
+    font-family: "Streamster";
+    src: url("./assets/fonts/Streamster.ttf");
 }
